# earth-reverse-engineering

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: deploy-web.yml  rust.yml
client/: rocktree_gl.h  shell.nix
client/crn/: crn_decomp.h
cpp/: .gitignore
crates/rocktree-client/: Cargo.toml
crates/rocktree-client/src/: camera.rs  loader.rs  lod.rs  main.rs  ui.rs
crates/rocktree-decode/: README.md
crates/rocktree-decode/src/: indices.rs
crates/rocktree-decode/src/texture/: crn.rs
crates/rocktree/src/: client.rs
rust/: Cargo.toml
rust/crates/rocktree/: Cargo.toml
rust/crates/rocktree-client/: Cargo.toml
rust/crates/rocktree-client/src/: camera.rs  loader.rs  lod.rs  main.rs  mesh.rs  unlit_material.rs  unlit_material.wgsl
rust/crates/rocktree-decode/src/: indices.rs  lib.rs  normals.rs  obb.rs  octants.rs  path.rs  texcoords.rs  vertices.rs
rust/crates/rocktree-proto/: README.md
rust/crates/rocktree/src/: cache.rs  client.rs  lib.rs  types.rs
scripts/: web_build.sh  web_dev.sh
