[package]
name = "rocktree"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level async client for fetching and decoding Google Earth mesh data"

[dependencies]
rocktree-proto = { path = "../rocktree-proto" }
rocktree-decode = { path = "../rocktree-decode" }
prost = "0.13"
glam = "0.30"
tracing = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = { version = "0.12", default-features = false }

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"

[[bin]]
name = "fetch_test_data"
required-features = ["test-tools"]

[[bin]]
name = "compare_test_vectors"
required-features = ["test-tools"]

[features]
default = []
test-tools = ["dep:tokio", "dep:serde_json"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[lints]
workspace = true
